<resources>
    <string name="app_name">Psquare Pune</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Psqaure</string>
    <string name="nav_header_subtitle">psquare@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>


    <string name="view_map">View Map</string>
    <string name="todays_root">Todays Route</string>

    <string name="drop_pin">Drop Pin</string>
    <string name="undo_drop_pin">Undo Drop Pin</string>

    <string name="add_survey_detail">Add Survey Details : </string>
    <string name="enter_name">&#x20;&#x20;Enter Name</string>
    <string name="enter_mobile_number">&#x20;&#x20;Enter Mobile number</string>
    <string name="enter_org_name">&#x20;&#x20;Enter Organisation Name</string>
    <string name="select_org_type">&#x20;&#x20;Select Organisation Type</string>
    <string name="enter_address">&#x20;&#x20;Enter Address</string>
    <string name="submit">Submit</string>


    <string-array name="orgType">
        <item>Cosmetic Shop</item>
        <item>Beauty Parlour</item>
        <item>Men's Parlour</item>
        <item>Freelancer</item>
        <item>General Store</item>
        <item>Medical</item>
        <item>Other</item>
    </string-array>
</resources>
